deployments/api-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
  namespace: galore
  labels:
    app: api-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
        - name: api-service
          image: m1thrandir/galore:api-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 9090
            initialDelaySeconds: 30
            periodSeconds: 20
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 9090
            initialDelaySeconds: 60
            periodSeconds: 40
          volumeMounts:
            - name: public
              mountPath: /app/public
      volumes:
        - name: public
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: galore
  labels:
    app: api-service
spec:
  type: ClusterIP
  selector:
    app: api-service
  ports:
    - name: http
      port: 9090
      targetPort: 9090
