deployments/cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  namespace: galore
  labels:
    app: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - name: cache
          image: docker.dragonflydb.io/dragonflydb/dragonfly
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: cache-data
              mountPath: /data
      volumes:
        - name: cache-data
          persistentVolumeClaim:
            claimName: cache-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: galore
  labels:
    app: cache
spec:
  type: ClusterIP
  selector:
    app: cache
  ports:
    - name: cache
      port: 6379
      targetPort: 6379
