deployments/categorize-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: categorize-service
  namespace: galore
  labels:
    app: categorize-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: categorize-service
  template:
    metadata:
      labels:
        app: categorize-service
    spec:
      containers:
        - name: categorize-service
          image: m1thrandir/galore:categorize-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8003
          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 30
            periodSeconds: 20
          livenessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 60
            periodSeconds: 40
---
apiVersion: v1
kind: Service
metadata:
  name: categorize-service
  namespace: galore
  labels:
    app: categorize-service
spec:
  type: ClusterIP
  selector:
    app: categorize-service
  ports:
    - name: http
      port: 8003
      targetPort: 8003
