deployments/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: galore
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: pgvector/pgvector:pg15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: galore
  labels:
    app: db
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
